--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Data Analysis Portfolio</a></h1>
-							<p>From Data to Decisions: Visualizing the Why Behind the What</p>
+							<p>Design @HueVuong</p>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -44,7 +44,7 @@
 										</ul>
 									</li>
 									<li><a class="icon solid fa-cog" href="left-sidebar.html"><span>SQL</span></a></li>
-									<li><a class="icon solid fa-retweet" href="right-sidebar.html"><span>Tips&Tricks</span></a></li>
+									<li><a class="icon solid fa-retweet" href="right-sidebar.html"><span>Python</span></a></li>
 									<li><a class="icon solid fa-sitemap" href="no-sidebar.html"><span>Blog</span></a></li>
 								</ul>
 							</nav>
@@ -56,7 +56,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2><strong>Every dataset holds a story </strong> — this is where I turn business questions into data-driven answers...</h2>
+							<h2><strong>From Data to Decisions </strong> — Visualizing the Why Behind the What </h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -362,3 +362,4 @@
 
 	</body>
 </html>
+<link rel="stylesheet" href="styles.css">
